tests/errors/integerStringInput.f90
program integerStringInput
    implicit none
    integer::x


    print *, "Enter Integer: "
    read(*,*) x
    print *, "You Entered: ", x
end program integerStringInput